syntax = "proto3";
package pb;

message RequestVoteReq {
  // Term is the new voting term.
  uint64 term = 1;
  // Candidate is the candidate id
  uint64 candidateId = 2;
  // LastLogIndex is the last log index.
  uint64 lastLogIndex = 3;
  // LastLogTerm is the last log term.
  uint64 lastLogTerm = 4;
}

message RequestVoteResp {
  // Term is the newer term if the lader is out of date.
  uint64 term = 1;
  // Granted if the vote was granted.
  bool voteGranted = 2;
}

service RaftService {
    rpc RequestVote(RequestVoteReq) returns (RequestVoteResp){}
}